# silicolab

./: .gitattributes  .gitignore  .rules  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  REUSE.toml  SECURITY.md  THIRD-PARTY-NOTICES.md  build.rs  design-qa.md
.cargo/: config.toml
.github/workflows/: auto-approve.yml  cache-warm.yml  ci.yml  claude-code-review.yml  docs.yml  release.yml
LICENSES/: LicenseRef-Public-Domain.txt  LicenseRef-SilicoLab-Commercial.txt  OFL-1.1.txt
assets/icon/: AppIcon.icns
branding/: silicolab.desktop
compute-core/: Cargo.toml
compute-core/assets/ubl/: README.md
compute-core/src/: hosts.rs  job.rs  launch.rs  lib.rs  payload.rs  wire.rs
compute-core/src/domain/: anchor.rs  biopolymer.rs  mod.rs  modification.rs  nonbonded.rs  ptm_patches.rs  secondary_structure.rs  structure.rs  trajectory.rs
compute-core/src/domain/biopolymer/: sequence.rs
compute-core/src/domain/chemistry/: bonds.rs  elements.rs  hydrogens.rs  tests.rs
compute-core/src/domain/glycan/: dictionary.rs  iupac.rs  linkage_topology.rs  mod.rs  patches.rs  reducing_end.rs  templates.rs
compute-core/src/domain/glycan/templates/: tests.rs
compute-core/src/domain/secondary_structure/: tests.rs
compute-core/src/domain/sketch/: mod.rs
compute-core/src/domain/smiles/: mod.rs  parser.rs  writer.rs
compute-core/src/domain/structure/: tests.rs
compute-core/src/engines/: mod.rs  orca.rs  process.rs  registry.rs
compute-core/src/engines/docking/: mod.rs  types.rs
compute-core/src/engines/forcefield/: mod.rs
compute-core/src/engines/forcefield/uff/: energy.rs  optimize.rs  params.rs
compute-core/src/engines/gromacs/: build.rs  carb_topology.rs  custom_ff.rs  exec.rs  forcefield_assets.rs  glycoprotein_topology.rs  input.rs  material.rs  mod.rs  nonbonded.rs  output.rs  ptm_topology.rs  realize.rs  runner.rs  topgen.rs  topology.rs
compute-core/src/engines/gromacs/analysis/: energy.rs  mod.rs  tools.rs  xvg.rs
compute-core/src/engines/gromacs/glycoprotein_topology/: protein_top.rs  tests.rs
compute-core/src/engines/gromacs/input/: tests.rs
compute-core/src/engines/gromacs/ptm_topology/: tests.rs
compute-core/src/engines/gromacs/runner/: prepare.rs  subprocess.rs  tests.rs
compute-core/src/engines/methods/: mod.rs
compute-core/src/engines/methods/kb/: docking.json  md.json  qm.json
compute-core/src/engines/qm/: build.rs  memory.rs  mod.rs  periodic.rs  run.rs  summary.rs  tests.rs  types.rs
compute-core/src/engines/remote/: artifact.rs  bootstrap.rs  deploy.rs  launcher.rs  mod.rs  run_record.rs
compute-core/src/engines/remote/launcher/: smoke.rs  tests.rs
compute-core/src/io/: mod.rs  pdb_fetch.rs  self_update.rs  structure_codec.rs  structure_export.rs  structure_format.rs  structure_io.rs  structure_paths.rs  structure_text.rs  update_check.rs
compute-core/src/io/formats/: cif.rs  gro.rs  mod.rs  mol2.rs  pdb.rs  xyz.rs
compute-core/src/io/formats/pdb/: fields.rs  read.rs  tests.rs  write.rs
compute-core/src/io/formats/pdbqt/: mod.rs  prep.rs
compute-core/src/io/formats/psf/: document.rs  mod.rs  sectioned.rs
compute-core/src/io/formats/slf/: document.rs  mod.rs  reticular.rs  sectioned.rs
compute-core/src/io/llm/: anthropic.rs  external.rs  mod.rs  openai_compat.rs  provider.rs  types.rs
compute-core/src/io/llm/anthropic/: tests.rs
compute-core/src/io/trajectory/: mod.rs  xtc.rs
compute-core/src/io/trajectory/xtc/: tests.rs
compute-core/src/md/: bonded_graph.rs  catalog.rs  framework.rs  mod.rs  solvation.rs  system.rs  topology.rs
compute-core/src/md/run/: merge.rs  mod.rs  preset.rs  recommend.rs  system_context.rs  validate.rs
compute-core/src/skills/: mod.rs  tests.rs
compute-core/src/wire/: tests.rs
compute-core/src/workflows/: docking.rs  gromacs.rs  mod.rs  optimization.rs  qm.rs  sketch_to_structure.rs
compute-core/src/workflows/assembly/: condense.rs  mod.rs  stitch.rs
compute-core/src/workflows/glycan/: builder.rs  glycoprotein.rs  mod.rs  torsions.rs
compute-core/src/workflows/glycan/builder/: declash.rs
compute-core/src/workflows/molecular_dynamics/: catalog.rs  framework.rs  mod.rs  protocol.rs  solvation.rs  system.rs
compute-core/src/workflows/molecular_dynamics/run/: merge.rs  preset.rs  recommend.rs  stage.rs
compute-core/src/workflows/nanosheet/: mod.rs  recipe.rs
compute-core/src/workflows/packing/: density.rs  engine.rs
compute-core/src/workflows/packing/engine/: cell_list.rs  optimize.rs  setup.rs  types.rs
compute-core/src/workflows/ptm/: acetylate.rs  attach.rs  fragments.rs  host.rs  lipidate.rs  methylate.rs  mod.rs  phosphorylate.rs  testkit.rs  ubl.rs
compute-core/src/workflows/reticular/: builder.rs  library.rs  mod.rs  recipe.rs
compute-core/src/workflows/reticular/builder/: functionalization.rs  honeycomb.rs  supercell.rs  tests.rs
compute-core/src/workflows/reticular/building_block/core/t3/: benzene.slf
compute-core/src/workflows/reticular/building_block/functional_group/: acetoxy.slf  aldehyde.slf  bromine.slf  carboxyl.slf  chlorine.slf  cyano.slf  dimethylamino.slf  fluorine.slf  iodine.slf  isopropoxy.slf  methoxy.slf  nitro.slf  nitroso.slf  propoxy.slf  sulfonatopropyl.slf  sulfonic_acid.slf  thiol.slf  trifluoromethyl.slf  vinyl.slf
compute-core/src/workflows/reticular/building_block/linker/: benzene.slf
compute-core/tests/: remote_direct.rs  remote_slurm.rs  subprocess_spawn_guard.rs
docs/: README.md  adding-a-feature.md  developing-remote-execution.md  testing-external-engines.md
docs-site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.toml
docs-site/scripts/: sync-assets.mjs
scripts/: gen-icons.py
silicolab-compute/: Cargo.toml
silicolab-compute/src/: main.rs
src/: lib.rs  main.rs
src/backend/: assistant_config.rs  chart_export.rs  config.rs  engine_launch.rs  entries.rs  force_fields.rs  hardware.rs  history.rs  housekeeping.rs  materialization.rs  mod.rs  project.rs  (+7 more)
tests/: engine_exec.rs
xtask/: Cargo.toml
(+390 files in other folders)
