[package]
name = "silicolab"
version = "0.1.0"
authors = ["Jiekang Tian", "Dongcheng Lin"]
edition = "2024"
description = "Computational environment for chemistry, biology & materials research."
readme = "README.md"
repository = "https://github.com/silicolab/silicolab"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1", features = ["derive"] }
chemx = "0.4.0"
eframe = { version = "0.34", features = ["persistence"] }
egui-phosphor = "0.12.0"
# Renders the assistant's Markdown replies in the Assistant tab. `pulldown_cmark`
# is the runtime viewer feature; `load-images` is dropped (we render prose, not
# remote images, and skipping it keeps egui_extras' image/file loaders out).
egui_commonmark = { version = "0.23", default-features = false, features = [
    "pulldown_cmark",
] }
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
nalgebra = "0.35.0"
rfd = "0.17"
rusqlite = { version = "0.40.0", features = ["bundled"] }
sdfrust = "0.6"
self_update = { version = "0.42", default-features = false, features = [
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    # zip's Deflate decoder — required to read Windows `.zip` release assets
    # (`compression-flate2` only covers `.tar.gz`, not zip entries).
    "compression-zip-deflate",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "3.3.0"
uuid = { version = "1", features = ["v4"] }
raw-window-handle = "0.6"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
window-vibrancy = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.19"
objc2 = "0.6"
objc2-foundation = "0.3"

# Unconditional, not target-gated: Cargo resolves build-dependency cfgs against
# the *host*, so a `cfg(target_os = "windows")` gate here drops winresource when
# cross-compiling to Windows from another OS — leaving build.rs unable to find
# the crate. build.rs instead gates the actual use on CARGO_CFG_TARGET_OS;
# winresource builds everywhere and only does work for Windows targets.
[build-dependencies]
winresource = "0.1"

[dev-dependencies]
pollster = "0.4"
