[workspace]
members = ["compute-core", "silicolab-compute"]

# Single source of truth for the version shared across the GUI, the headless
# worker, and `compute-core`. The deploy version pin and release tag require all
# three to report the same version, so they inherit it from here.
[workspace.package]
version = "0.1.0"

[package]
name = "silicolab"
version.workspace = true
authors = ["Jiekang Tian", "Dongcheng Lin"]
edition = "2024"
description = "Computational environment for chemistry, biology & materials research."
readme = "README.md"
repository = "https://github.com/silicolab/silicolab"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1", features = ["derive"] }
compute-core = { path = "compute-core" }
# Declarative grammar for the in-app `.sls` command console (see
# `frontend/console/grammar.rs`): one clap derive tree is the single source of
# truth for dispatch and help. `no_binary_name` is used because the console is a
# REPL with no argv[0]; errors are rendered to strings, never `exit()`.
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.34", features = ["persistence"] }
egui-phosphor = "0.12.0"
# Renders the assistant's Markdown replies in the Assistant tab. `pulldown_cmark`
# is the runtime viewer feature; `load-images` is dropped (we render prose, not
# remote images, and skipping it keeps egui_extras' image/file loaders out).
egui_commonmark = { version = "0.23", default-features = false, features = [
    "pulldown_cmark",
] }
flate2 = "1"
hartree = "0.1.1"
image = { version = "0.25", default-features = false, features = ["png"] }
nalgebra = "0.35.0"
rfd = "0.17"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
ureq = "3.3.0"
uuid = { version = "1", features = ["v4"] }
raw-window-handle = "0.6"
# Blocks on wgpu's async `Instance::enumerate_adapters` during the one-shot GPU
# inventory probe at startup (`frontend/gpu_inventory.rs`).
pollster = "0.4"

[features]
# NVIDIA live GPU stats via NVML. On by default so release builds monitor
# NVIDIA cards out of the box; `Nvml::init()` degrades gracefully to N/A when no
# NVIDIA GPU/driver is present, so default-on is safe. The dependency is
# Windows/Linux-only (see the target table below) — on macOS the feature is a
# no-op and `nvml-wrapper` is never compiled.
default = ["nvidia"]
nvidia = ["dep:nvml-wrapper"]

# Live NVIDIA GPU stats (utilization / VRAM / temperature) via NVML, surfaced in
# the hardware monitor. Optional + Windows/Linux only: NVML doesn't exist on
# macOS, so the dependency is never compiled there even with `--all-features`.
# `nvml-wrapper` dlopens nvml.dll / libnvidia-ml.so at runtime, so the build
# never link-depends on an NVML SDK and `Nvml::init()` simply Errs (no panic) on
# non-NVIDIA or driver-absent hosts — the monitor then falls back to N/A.
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
nvml-wrapper = { version = "0.12", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
window-vibrancy = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.19"
objc2 = "0.6"
objc2-foundation = "0.3"

# Unconditional, not target-gated: Cargo resolves build-dependency cfgs against
# the *host*, so a `cfg(target_os = "windows")` gate here drops winresource when
# cross-compiling to Windows from another OS — leaving build.rs unable to find
# the crate. build.rs instead gates the actual use on CARGO_CFG_TARGET_OS;
# winresource builds everywhere and only does work for Windows targets.
[build-dependencies]
winresource = "0.1"

[dev-dependencies]
serde_json = "1.0"
