[package]
name = "compute-core"
version = "0.1.1"
authors = ["Jiekang Tian"]
edition = "2024"
description = "Compute engines, workflows, and the engine-job wire contract for SilicoLab."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
docking = "0.1.0"
hartree = "0.1.1"
nalgebra = "0.35.0"
rayon = "1"
sdfrust = "0.6"
self_update = { version = "0.42", default-features = false, features = [
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "3.3.0"
uuid = { version = "1", features = ["v4"] }
